k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: srv-observability
  labels:
    app.kubernetes.io/name: app-observability
spec:
  selector:
    app: app-observability
  type: NodePort
  ports:
  - name: http
    port:  80
    targetPort:  8000
    nodePort: 30000
