k8s/ingress-grafana.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: grafana-auth-secret
    nginx.ingress.kubernetes.io/auth-realm: "Authentication Required - Grafana"
spec:
  ingressClassName: nginx
  rules:
  - host: 'grafana.vinnycloud.com.br'
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: my-kube-prometheus-stack-grafana
            port:
              number: 80
